fix contrast

--- a/salmonriveradventures/css/small.css
+++ b/salmonriveradventures/css/small.css
@@ -56,7 +56,7 @@ img {
 .navigation {
     margin: 0 auto;
     /*width: 100%;*/
-    background-color:  #D94701;
+    background-color:  #C83200;
     font-family: 'Comic Neue', cursive;
     color: white;
     font-size: large;
